app/components/toolbar/toolbar.module.css
.toolbar {
  display: flex;
  flex-direction: column;
  gap: var(--spaceS);
  padding: var(--spaceS);
  background: var(--background);
  border-radius: 5px;
  box-shadow: 0 var(--spaceXS) var(--spaceM) color-mix(in lab, var(--black) 10%, transparent);
  height: auto;
  overflow: hidden;
}

.toggleButton {
  height: 40px;
  flex-shrink: 0;
  margin-bottom: var(--spaceM);
}

.toolbarContent {
  display: flex;
  flex-direction: column;
  gap: var(--spaceS);
  height: auto;
}

.hidden {
  height: calc(40px + (var(--spaceS) * 2));
  opacity: 0.3;
}

.hidden .toolbarContent {
  opacity: 0;
  pointer-events: none;
  height: 0;
}

